--- a/client.htm
+++ b/client.htm
@@ -293,16 +293,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-87898.htm" title="宠物店从哪进货的（宠物店货源都从哪里来）">宠物店从哪进货的（宠物店货源都从哪里来）</a></li>
-                        <li class="py-2"><a href="/news/article-104182.htm" title="猫粮狗粮零售如何挣钱（狗粮猫粮的销售和利润怎么样）">猫粮狗粮零售如何挣钱（狗粮猫粮的销售和利润怎么样）</a></li>
-                        <li class="py-2"><a href="/news/article-85745.htm" title="淮北小动物救助站（淮北小动物救助站电话）">淮北小动物救助站（淮北小动物救助站电话）</a></li>
-                        <li class="py-2"><a href="/news/article-94581.htm" title="动物医院大众点评文案范文图片（动物医院大众点评100字通用评论）">动物医院大众点评文案范文图片（动物医院大众点评100字通用评论）</a></li>
-                        <li class="py-2"><a href="/news/article-92329.htm" title="建议穷人养的10种猫布偶狗（建议穷人养的10种猫布偶狗狗）">建议穷人养的10种猫布偶狗（建议穷人养的10种猫布偶狗狗）</a></li>
-                        <li class="py-2"><a href="/news/article-102715.htm" title="动物疫苗价格表图片高清版大全 动物疫苗价格表图片高清版大全集">动物疫苗价格表图片高清版大全 动物疫苗价格表图片高清版大全集</a></li>
-                        <li class="py-2"><a href="/news/article-87897.htm" title="JS实现数码时钟">JS实现数码时钟</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-5-19-free-ssr-node.htm" title="5月19日→21.5M/S|2025年最新免费节点SSR/Clash/Shadowrocket/V2ray订阅链接地址，便宜机场推荐">5月19日→21.5M/S|2025年最新免费节点SSR/Clash/Shadowrocket/V2ray订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/news/article-102716.htm" title="南京哪里可以免费领养宠物猫狗狗（南京哪里可以免费领养猫咪）">南京哪里可以免费领养宠物猫狗狗（南京哪里可以免费领养猫咪）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-25-free-clash.htm" title="4月25日→19.1M/S|2025年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接地址，便宜机场推荐">4月25日→19.1M/S|2025年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/news/article-111033.htm" title="Numpy 高效的运算工具">Numpy 高效的运算工具</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-5-2-clash-node-daily-updates.htm" title="5月2日→20.4M/S|2025年最新免费节点SSR/Clash/V2ray/Shadowrocket订阅链接地址，便宜机场推荐">5月2日→20.4M/S|2025年最新免费节点SSR/Clash/V2ray/Shadowrocket订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-6-free-high-speed-nodes.htm" title="4月6日→19.2M/S|2025年最新免费节点V2ray/Shadowrocket/Clash/SSR订阅链接地址，便宜机场推荐">4月6日→19.2M/S|2025年最新免费节点V2ray/Shadowrocket/Clash/SSR订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/news/article-89355.htm" title="宠物粮市场前景如何分析的（宠物粮行业）">宠物粮市场前景如何分析的（宠物粮行业）</a></li>
                         <li class="py-2"><a href="/news/article-97537.htm" title="宠物领养中心需要什么条件才能去上班（宠物领养机构在哪里）">宠物领养中心需要什么条件才能去上班（宠物领养机构在哪里）</a></li>
-                        <li class="py-2"><a href="/news/article-93062.htm" title="宠物粮市场分析报告范文怎么写（宠物粮市场分析报告范文怎么写的）">宠物粮市场分析报告范文怎么写（宠物粮市场分析报告范文怎么写的）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-19-free-subscribe-node.htm" title="4月19日→21.5M/S|2025年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址，便宜机场推荐">4月19日→21.5M/S|2025年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-5-6-free-high-speed-nodes.htm" title="5月6日→19.3M/S|2025年最新免费节点Clash/V2ray/Shadowrocket/SSR订阅链接地址，便宜机场推荐">5月6日→19.3M/S|2025年最新免费节点Clash/V2ray/Shadowrocket/SSR订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/news/article-107658.htm" title="沈阳宠物免费领养赠送地点（沈阳赠送领养宠物网站）">沈阳宠物免费领养赠送地点（沈阳赠送领养宠物网站）</a></li>
                     </ul>
     </div>
 </div>
@@ -314,7 +314,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">34</span> <a href="/date/2025-05/" title="2025-05 归档">2025-05</a></h4>
+                <h4><span class="badge" style="float: right;">37</span> <a href="/date/2025-05/" title="2025-05 归档">2025-05</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">79</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
